hphp/hack/test/typecheck/dynamic/dynamic_keyword.php.exp
File "dynamic_keyword.php", line 3, characters 9-15:
Cannot use `dynamic` as a type name as it is reserved (Parsing[1002])
